--- a/Tournees.html
+++ b/Tournees.html
@@ -131,7 +131,7 @@
 				  <a href="nos_partenaires.html">Nos partenaires</a>
 			</div>
 		</div> 
-		  <a href="galerie.html">Tournées</a>
+		  <a href="Tournees.html">Tournées</a>
 		  <a href="reserver_une_session_studio.html">Réserver une session studio</a>
 		  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
